<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Power Laucher</string>
    <string name="exit_string">Exit extreme mode</string>
    <string name="exit_string_title">Exit extreme mode</string>
    <string name="ok_string">OK</string>
    <string name="cancel_string">Cancel</string>
    <string name="exit_msg">Are you sure to exit extreme mode?</string>
    <string name="exit_msg1">Phone is being charged, are you sure to exit extreme mode?</string>
    <string name="can_use_time">Standby time </string>
    <!--Gionee luoguangming 2017.03.02 modify CR01778824 begin-->
    <string name="need_charging_time">%s more need to be charged</string>
    <!--Gionee luoguangming 2017.03.02 modify CR01778824  end -->
    <string name="power_cannotget">Unable to estimate </string>
    <!-- Gionee <yangxinruo> <2015-9-9> <modify> for CR01549850 begin -->
    <string name="power_hours">&#160;Hour&#160;</string>
    <string name="power_minutes">&#160;Minute&#160;</string>
    <!-- Gionee <yangxinruo> <2015-9-9> <modify> for CR01549850 end -->    
    <string name="is_charging_now">Charging</string>
    <string name="charged_completely">Charged</string>
    <!-- Gionee <yangxinruo> <2015-07-31> add for CR01529084 begin -->
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <!-- Gionee <yangxinruo> <2015-07-31> add for CR01529084 end -->
    <string name="power_about"></string>
    <string name="power_low">lower than </string>
    <string name="control_panel_brightness">Brightness</string>

    <!-- Gionee xionghg add for power saving optimization 145357 begin -->
    <string name="activity_title_add_apps">Add apps</string>
    <string name="add_app">Add</string>
    <string name="system_process">System process</string>
    <string name="social_app">Social application</string>

    <string name="remaining_time">"Standby: "</string>
    <string name="remaining_time_2">"Use time: "</string>   

    <plurals name="remaining_time_hour">
        <item quantity="one">"1 h "</item>
        <item quantity="other">"%d h "</item>
    </plurals>
    <plurals name="remaining_time_minute">
        <item quantity="one">"1 min"</item>
        <item quantity="other">"%d min"</item>
    </plurals>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="settings_activity_title">Settings</string>
    <string name="pref_title_mobile_data">Mobile data</string>
    <string name="pref_title_wifi">WLAN</string>
    <string name="pref_title_wifi_DP">WF</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="no_sim">No Sim Card</string>
    
    <!-- Guide -->
    <string name="guide_text_1">"1. Connect mobile data or Wlan here"</string>
    <!-- chenyee liu_shuang 20181012 add for CSW1803DP-52 begin -->
    <string name="guide_text_1_WF">"1. Connect mobile data or WF here"</string>
    <!-- chenyee liu_shuang 20181012 add for CSW1803DP-52 end -->
    <!-- guoxt modify for CSW1803DB-44 begin -->
    <string name="guide_text_1_nowifi">"1. Connect mobile data here"</string>
    <!-- guoxt modify for CSW1803DB-44 end -->
    <string name="guide_text_2">"2. \"Exit\" is here"</string>
    <!-- <string name="guide_text_3">"Some feature of some app "</string> -->
    <!-- <string name="guide_text_4">"may not run normally "</string> -->
    <!-- <string name="guide_text_5">"in extreme mode"</string> -->
    <string name="guide_text_6">"Some feature of some app may not run normally in extreme mode"</string>
    <string name="guide_text_got_it">"I know"</string>
    <!-- Gionee xionghg add for power saving optimization 145357 end -->

    <!--chenyee zhaocaili 20180827 add for Android P begin-->
    <string name="pref_title_wifi_new">Wi-Fi</string>
    <!--chenyee zhaocaili 20180827 add for Android P begin-->
</resources>
