<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/root"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/dark_warpaper"
                android:orientation="vertical" >

    <include
        android:id="@+id/date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/date_marginLeft"
        android:layout_marginTop="@dimen/date_marginTop"
        layout="@layout/plugin_date_time" />


    <RelativeLayout
        android:layout_toEndOf="@+id/date_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/date_marginTop" >

        <LinearLayout
            android:id="@+id/exit_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/date_marginLeft"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="15dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="true"
                android:src="@drawable/exit_bg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:duplicateParentState="true"
                android:gravity="center"
                android:text="@string/exit_string"
                android:textColor="@color/exit_color"
                android:textSize="14dp" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/setting_view"
            android:layout_width="@dimen/setting_view_width"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/setting_view_margin_end"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingBottom="@dimen/setting_view_padding_top"
            android:paddingTop="@dimen/setting_view_padding_top" >

            <TextView
                android:id="@+id/setting_view_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/setting_view_text_padding"
                android:gravity="center"
                android:text="@string/settings"
                android:background="@drawable/settings_background"
                android:textColor="@color/app_color" />
        </FrameLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/time_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_time"
        android:layout_marginTop="@dimen/date_marginTop"
        android:layout_marginStart="@dimen/date_marginLeft"
        android:gravity="center"
        android:textColor="@color/white_color"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/time_textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time_textview"
        android:layout_marginTop="@dimen/time_textview_margin_top"
        android:layout_marginStart="@dimen/date_marginLeft"
        android:gravity="center"
        android:textColor="@color/white_color"
        android:textSize="12dp" />

    <LinearLayout
        android:id="@+id/app2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time_textview2"
        android:layout_marginTop="@dimen/app_icon_margin_up"
        android:layout_marginStart="@dimen/app_icon_margin_left"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/phone"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="@color/app_color" />

        <TextView
            android:id="@+id/contacts"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="@dimen/app_icon_margin_left1"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="@color/app_color" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/app1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app2"
        android:layout_marginTop="@dimen/app_icon_margin_up2"
        android:layout_marginStart="@dimen/app_icon_margin_left"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/sms"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="@color/app_color" />

        <RelativeLayout
            android:id="@+id/extra_app0"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="@dimen/app_icon_margin_left1">

            <ImageView
                android:id="@+id/extra_app0_image"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/extra_app0_text"
                android:layout_below="@+id/extra_app0_image"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:gravity="center"
                android:textSize="16dp"
                android:textColor="@color/app_color" />

            <ImageView
                android:id="@+id/extra_app0_clear_image"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="14dp"
                android:src="@drawable/ic_clear"
                android:visibility="gone"/>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/app0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app1"
        android:layout_marginTop="@dimen/app_icon_margin_up2"
        android:layout_marginStart="@dimen/app_icon_margin_left"
        android:orientation="horizontal" >
<!--Chenyee guoxt 20180503 modify for CSW1703CX-97 begin-->
        <RelativeLayout
            android:id="@+id/extra_app1"
            android:layout_width="100dp"
            android:layout_height="100dp">

            <ImageView
                android:id="@+id/extra_app1_image"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/extra_app1_text"
                android:layout_below="@+id/extra_app1_image"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:gravity="center"
                android:textSize="16dp"
                android:textColor="@color/app_color" />

            <ImageView
                android:id="@+id/extra_app1_clear_image"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="14dp"
                android:src="@drawable/ic_clear"
                android:visibility="gone"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/extra_app2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="@dimen/app_icon_margin_left1">

            <ImageView
                android:id="@+id/extra_app2_image"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/extra_app2_text"
                android:layout_below="@+id/extra_app2_image"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:gravity="center"
                android:textSize="16dp"
                android:textColor="@color/app_color" />

            <ImageView
                android:id="@+id/extra_app2_clear_image"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="14dp"
                android:src="@drawable/ic_clear"
                android:visibility="gone"/>
        </RelativeLayout>
    </LinearLayout>
    <!--Chenyee guoxt 20180503 modify for CSW1703CX-97 end-->
    <RelativeLayout
        android:id="@+id/guide_view1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-24dp"
        android:layout_marginBottom="@dimen/guide_view_margin_bottom"
        android:visibility="gone"
        android:clickable="true">

        <!-- background begin -->
        <ImageView
            android:id="@+id/guide_image1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/guide_image_height"
            android:src="@drawable/super_mode_guide1"/>

        <!-- add this view to fill bottom when aspect ratio is bigger than 16:9 -->
        <ImageView
            android:layout_below="@+id/guide_image1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="#d8000000"/>
        <!-- background end -->

        <LinearLayout
            android:id="@+id/guide_text_container"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="@dimen/guide1_text1_margin_top"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="310dp"
                android:gravity="center"
                android:text="@string/guide_text_1"
                android:textSize="14dp"
                android:textColor="@android:color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/guide1_text2_margin_top"
                android:gravity="center"
                android:text="@string/guide_text_2"
                android:textSize="14dp"
                android:textColor="@android:color/white"/>
        </LinearLayout>

        <TextView
            android:id="@+id/guide1_next_text"
            android:layout_below="@+id/guide_text_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/guide1_next_text_margin_top"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:text="@string/guide_text_got_it"
            android:textSize="18dp"
            android:textColor="@color/app_color"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/guide_view2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-24dp"
        android:layout_marginBottom="@dimen/guide_view_margin_bottom"
        android:visibility="gone"
        android:clickable="true">

        <!-- background begin -->
        <ImageView
            android:id="@+id/guide_image2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/guide_image_height"
            android:src="@drawable/super_mode_guide2"/>

        <!-- add this view to fill bottom when aspect ratio is bigger than 16:9 -->
        <ImageView
            android:layout_below="@+id/guide_image2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="#d8000000"/>
        <!-- background end -->

        <TextView
            android:id="@+id/guide2_text3"
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:maxWidth="176dp"
            android:layout_marginTop="@dimen/guide2_text3_margin_top"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/guide_text_6"
            android:textSize="16dp"
            android:lineSpacingExtra="@dimen/guide2_text4_margin_top"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/guide2_next_text"
            android:layout_below="@+id/guide2_text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/guide2_next_text_margin_top"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:text="@string/guide_text_got_it"
            android:textSize="18dp"
            android:textColor="@color/app_color"/>
    </RelativeLayout>

</RelativeLayout>